<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginTop="16dp">

    <!-- Location Section -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/locationIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/location"
            android:contentDescription="@string/location_icon_description"
            android:tint="@android:color/black"/> <!-- Set ke hitam atau warna lain yang cocok -->


        <TextView
            android:id="@+id/locationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_value"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/locationUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_unit"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginStart="4dp"/>
    </LinearLayout>

</LinearLayout>
